[gd_scene load_steps=4 format=2]

[ext_resource path="res://pixel-emulator-font/PixelEmulator-xq08.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLogo" type="TextureRect" parent="VBoxContainer"]
margin_right = 1026.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 1026.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 3

[node name="Restart" type="Button" parent="VBoxContainer/Buttons"]
margin_top = 133.0
margin_right = 340.0
margin_bottom = 153.0
rect_min_size = Vector2( 340, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Buttons/Restart"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 85.0
margin_bottom = 10.0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 1 )
text = "Restart"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 343.0
margin_top = 133.0
margin_right = 683.0
margin_bottom = 153.0
rect_min_size = Vector2( 340, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Buttons/Main"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 85.0
margin_bottom = 10.0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 1 )
text = "Main Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="VBoxContainer/Buttons"]
margin_left = 686.0
margin_top = 133.0
margin_right = 1026.0
margin_bottom = 153.0
rect_min_size = Vector2( 340, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
flat = true

[node name="Label" type="Label" parent="VBoxContainer/Buttons/Exit"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 85.0
margin_bottom = 10.0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 1 )
text = "Exit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Main" to="." method="_on_Main_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Exit" to="." method="_on_Exit_pressed"]
